Thu Sep 14 18:45:54 2000  George Lebl <jirka@5z.com>

	* gnome-file-entry.c, gnome-icon-entry.c, gnome-textfu.c: use
	  g_path_get_dirname instead of g_dirname

2000-09-14  Martin Baulig  <baulig@suse.de>

	* gnome-vfs-util.h (GnomeGdkPixbufLoadHandle): Renamed to
	GnomeGdkPixbufAsyncHandle.
	(GnomeGdkPixbufLoadCallback): Added GnomeGdkPixbufAsyncHandle
	argument.
	(GnomeGdkPixbufDoneCallback): New callback typedef.
	(gnome_gdk_pixbuf_new_from_uri_async): Added
	GnomeGdkPixbufDoneCallback callback function argument which
	is called when we're done reading the pixbuf.

Wed Sep 13 21:42:25 2000  George Lebl <jirka@5z.com>

	* gnome-helpsys.c: make it compile

Wed Sep 13 00:45:34 2000  George Lebl <jirka@5z.com>

	* gnome-helpsys.c: Switch to GParam, some reformatting, a hack
	  for getting style/priority right with the GParam (they need to
	  be set in unison).  Also used the boilerplate macros

2000-09-12  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c: Switch to GParam and use the boilerplate
	macros.

2000-09-12  Martin Baulig  <baulig@suse.de>

	* selector-demo.c: Added GnomeIconEntry.

2000-09-12  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelector): Added "get_filename" signal.
	(gnome_selector_get_filename): New function.
	(gnome_selector_set_filename): Allow the filename to be NULL.

	* gnome-selector.c (gnome_selector_class_init): Added the missing
	"changed" signal.
	(get_filename_handler): Default is to use "get_entry_text".
	(set_filename_handler): Allow the filename to be NULL.

2000-09-11  Martin Baulig  <baulig@suse.de>

	* gnome-icon-selector.c (icon_selected_cb): New callback function;
	emits the "selection_changed" signal on the GnomeSelector.
	(gnome_icon_selector_construct): Connect the `icon_selected_cb' to
	the "select_icon" and "unselect_icon" signals of the GnomeIconList.

	* gnome-selector.h (GnomeSelector): Added "selection_changed" signal.

Sun Sep 10 19:47:07 2000  George Lebl <jirka@5z.com>
