@@ -1,3 +1,7 @@
+Thu Sep 14 19:44:26 2000  George Lebl <jirka@5z.com>
+
+	* gnome-app.c: use GParam
+
 Thu Sep 14 18:45:54 2000  George Lebl <jirka@5z.com>
 
 	* gnome-file-entry.c, gnome-icon-entry.c, gnome-textfu.c: use
